# Arduino-CLI-provisioning

./: ArduinoIoTCloudAPI_credentials-example.json  README.md  cli-getting-started.py  helpers.py  provisioning-helper.py  pyproject.toml  requirements.txt
Provisioning/: Provisioning.ino
ProvisioningADVANCED/: ProvisioningADVANCED.ino  sketch.json
